wording of final

--- a/rmd/3_final.Rmd
+++ b/rmd/3_final.Rmd
@@ -306,4 +306,4 @@ The next step is to understand why the model makes particular predictions; what 
 
 All variables with the prefix “Relative” are calculated as rank (values) / length (values) for values inside each search group. For example, a search compromised of “Milwaukee car accident lawyer”, the entry with the highest number of photos would get the relative # of photos value equal to 1. The entry with the lowest value would get a 0, and the remaining values would be something in between. The motivation behind this transformation is to make attribute values more comparable between search results i.e. trying to minimize effect of the size of the population of the city. 
 
-Some of the variables included in the model can be considered to be control variables. I.e. they are not itself interest of the analysis, but have to be included to get more accurate view of impact of other factors, for example place population.
+Some of the variables included in the model can be considered to be control variables. That means that they are in itself nof of interest of the analysis, but have to be included to get more accurate views of impact of other factors. One of the control varaibles is place population.
